argocd/overlays/lab/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
spec:
  hostnames:
  - "lab-argocd.ucdialplans.com"
