argocd/overlays/lab/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - lab-argocd.laskonet.com
  rules:
  - backendRefs:
    - name: argocd-server
      namespace: argocd
      kind: Service
      port: 80
