argocd/overlays/lab/kubeapi-httproute.yaml
# Provides access to KubeAPI via load balancer instead of directly through node or via Omni
# Useful in case of issues with Omni

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubeapi
  namespace: default
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "lab-kube.ucdialplans.com"
  rules:
  - backendRefs:
    - name: kubernetes
      namespace: default
      group: ""
      kind: Service
      port: 443
